--- a/app/src/main/res/layout/activity_signupactivity.xml
+++ b/app/src/main/res/layout/activity_signupactivity.xml
@@ -62,7 +62,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Sign Up"
-        android:background="#03A9F4"
+        android:background="#23DD6D"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
