--- a/app/src/main/res/layout/flyer.xml
+++ b/app/src/main/res/layout/flyer.xml
@@ -7,7 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/flyer"
+         />
 </LinearLayout>
